# voice-recognition

./: CMakeLists.txt  README.md  package.xml
CMake_Modules/: Findjvm.cmake
include/myVoce/: CommandParser.h
include/qt/: MainWindow.txt  UavAdapter.h  VR.h  vrGUI.h
include/voice_recognition/: VoiceRecognition.h  myVoce.txt
nodes/: uav_node.cpp  voice_recognition_node.cpp
resources/: MainWindow.txt  islurp.gram  vrGUI.ui
src/: CommandParser.cpp  Main.txt  VoiceRecognition.cpp  main.cpp  vrGUI.cpp
src/myVoce/: CommandParser.cpp  myVoce.txt
src/qt/: MainWindow.txt  UavAdapter.cpp  VR.cpp  VoiceRecognition.cpp  vrGUI.cpp
