
<package>

    <name>voice_recognition</name>
    <version>0.0.0</version>
    <description>
        bare bones ros package with a QMainWindow that does not rely on rqt.
    </description>
    <maintainer email="net2net4all@gmail.com">VR Team</maintainer>
    <license>BSD</license>

    <url>http://ros.org/wiki/foo_core</url>
    <author>VR Team</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>gcs</build_depend>
 <build_depend>eigen_conversions</build_depend>
 <build_depend>lcar_msgs</build_depend>
 <build_depend>cv_bridge</build_depend>
 <build_depend>image_transport</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>gcs</run_depend>
    <run_depend>eigen_conversions</run_depend>  
        <run_depend>lcar_msgs</run_depend>   
        <run_depend>cv_bridge</run_depend>   
        <run_depend>image_transport</run_depend>   
 
</package>
