
<package>

    <name>voice_recognition</name>
    <version>0.0.1</version>
    <description>
        Ros Package containing sub-node with VOCE
    </description>
    <maintainer email="daniel.benusovich.727@my.csun.edu">Cool Kids</maintainer>
    <license>BSD</license>

    <url>http://ros.org/wiki/foo_core</url>
    <author>VR Team</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>jvm</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>jvm</run_depend>
   


</package>
